--- a/thesis-ch05-lemur.tex
+++ b/thesis-ch05-lemur.tex
@@ -864,6 +864,7 @@ its remaining planning cost becomes zero.
 \end{algorithm}
 
 \subsection{Ensemble Edge Cost Models}
+\label{subsec:lemur:ensemble-edge-cost-models}
 
 The ensemble edge cost model $\mathcal{M}$
 which provides the estimators $\grave{p}(e)$ and $\hat{x}(e)$
